--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.18.0",
     "dom-shims": "^0.1.4",
     "material-design-icons-iconfont": "^3.0.3",
+    "underscore": "^1.9.1",
     "vue": "^2.5.17",
     "vue-bem-cn": "^1.1.1",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.3.1",
     "vuex": "^3.0.1"
   },
